--- a/GameProject.vcxproj
+++ b/GameProject.vcxproj
@@ -161,6 +161,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="character.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Figure.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -175,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="character.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="debug_printf.h" />
