--- a/GameProject.vcxproj
+++ b/GameProject.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="character.cpp" />
     <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="debug_font.cpp" />
     <ClCompile Include="Figure.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Grid.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="character.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="debug_font.h" />
     <ClInclude Include="debug_printf.h" />
     <ClInclude Include="Figure.h" />
     <ClInclude Include="Game.h" />
