TimerDraw()関数に引数を追加,Sori.cppとhを追加

--- a/GameProject.vcxproj
+++ b/GameProject.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mydirect3d.cpp" />
     <ClCompile Include="Result.cpp" />
+    <ClCompile Include="Sori.cpp" />
     <ClCompile Include="sprite.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="mydirect3d.h" />
     <ClInclude Include="Result.h" />
+    <ClInclude Include="Sori.h" />
     <ClInclude Include="sprite.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="Timer.h" />
